chore: do not upload cypress videos and add cypress run script to run tests headlessly

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "remix-serve build",
     "typecheck": "tsc",
     "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
