--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^8.38.0",
     "firebase-tools": "^12.4.0",
     "jsdom": "^22.1.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.8.4",
     "vite": "^4.3.9",
