--- a/firebase.json
+++ b/firebase.json
@@ -28,9 +28,15 @@
     },
     "ui": {
       "enabled": true
+    },
+    "storage": {
+      "port": 9199
     }
   },
   "firestore": {
-    "rules": "./firebase-fixtures/firestore.rules"
+    "rules": "firestore.rules"
+  },
+  "storage": {
+    "rules": "storage.rules"
   }
 }
