chore: export firebase emulators data to be used for tests'

--- a/firebase-fixtures/firebase-export-metadata.json
+++ b/firebase-fixtures/firebase-export-metadata.json
@@ -1,7 +1,16 @@
 {
-  "version": "11.0.1",
+  "version": "12.4.0",
+  "firestore": {
+    "version": "1.17.4",
+    "path": "firestore",
+    "metadata_file": "firestore/firestore.overall_metadata"
+  },
   "auth": {
-    "version": "11.0.1",
+    "version": "12.4.0",
     "path": "auth"
+  },
+  "storage": {
+    "version": "12.4.0",
+    "path": "storage"
   }
 }
