--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "remix build",
     "dev": "remix dev",
     "emulators": "firebase emulators:start --project healhty-food-2023-2024 --import=firebase-fixtures",
-    "emulators:export": "firebase emulators:export --only=auth,firestore,storage ../firebase-fixtures",
+    "emulators:export": "firebase emulators:export --only=auth,firestore,storage ./firebase-fixtures",
     "start": "remix-serve build",
     "typecheck": "tsc",
     "cypress:open": "cypress open",
