--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "cypress": "^12.15.0",
     "eslint": "^8.38.0",
     "firebase-tools": "^12.4.0",
+    "jest": "^29.5.0",
     "jsdom": "^22.1.0",
+    "sinon": "^15.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.8.4",
     "vite": "^4.3.9",
