--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "remix-google-cloud-functions": "^0.1.0"
+    "remix-google-cloud-functions": "^0.1.0",
+    "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
