--- a/package.json
+++ b/package.json
@@ -52,14 +52,15 @@
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "firebase-tools": "^12.4.0",
+    "husky": "^8.0.0",
     "jest": "^29.5.0",
     "jsdom": "^22.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "3.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.8.4",
     "vite": "^4.3.9",
-    "vitest": "^0.32.2",
-    "husky": "^8.0.0"
+    "vitest": "^0.32.2"
   },
   "engines": {
     "node": "18"
