--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "typecheck": "tsc",
     "format": "prettier --write .",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --max-warnings 10 --cache-location ./node_modules/.cache/eslint --fix .",
-    "test:e2e:dev": "run-p dev cypress:open",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:run": "playwright test",
     "test": "vitest",
     "test:run": "vitest --run",
     "test:coverage": "vitest run --coverage",
@@ -38,6 +37,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@playwright/test": "^1.36.1",
     "@remix-run/dev": "^1.17.1",
     "@remix-run/eslint-config": "^1.17.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -48,7 +48,6 @@
     "@vitejs/plugin-react": "^4.0.1",
     "@vitest/coverage-c8": "^0.32.2",
     "@vitest/ui": "^0.32.2",
-    "cypress": "^12.15.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "firebase-tools": "^12.4.0",
