--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "remix-serve build",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx --max-warnings 10 --cache-location ./node_modules/.cache/eslint --fix .",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --max-warnings 10 --cache-location ./node_modules/.cache/eslint .",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:run": "playwright test",
     "test": "vitest",
