build: update emulator data

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "remix build",
     "dev": "run-p emulators dev:remix",
     "dev:remix": "remix dev",
-    "emulators": "firebase emulators:start --project healhty-food-2023-2024 --import=firebase-fixtures",
-    "emulators:export": "firebase emulators:export --only=auth,firestore,storage ./firebase-fixtures",
+    "emulators": "firebase emulators:start --project healhty-food-2023-2024 --import=firebase-exported",
+    "emulators:export": "firebase emulators:export --only=auth,firestore,storage ./firebase-exported",
     "start": "remix-serve build",
     "typecheck": "tsc",
     "format": "prettier --write .",
