--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     "rewrites": [
       {
         "source": "**",
-        "function": "remix"
+        "function": "pensemosweb"
       }
     ]
   },
