--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:run": "vitest --run",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-    "prepare": "husky install",
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
     "validate": "run-p lint test:run"
   },
   "dependencies": {
