refactor: add blog page and  page for post content

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "./functions/index.js",
   "scripts": {
     "build": "remix build",
-    "dev": "run-p emulators dev:remix",
-    "dev:remix": "remix dev",
-    "emulators": "firebase emulators:start --project healhty-food-2023-2024 --import=firebase-exported",
-    "emulators:export": "firebase emulators:export --only=auth,firestore,storage ./firebase-exported",
+    "dev": "remix dev",
+    "dev:emulators": "run-p emulators dev:remix",
+    "emulators": "firebase emulators:start --project pensemosweb-mx --import=firebase-export",
+    "emulators:export": "firebase emulators:export --only=auth,firestore,storage ./firebase-export",
     "start": "remix-serve build",
     "typecheck": "tsc",
     "format": "prettier --write .",
@@ -29,6 +29,7 @@
     "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.3.1",
     "isbot": "^3.6.8",
+    "marked": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
