--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
-    "validate": "run-p lint test:run"
+    "validate": "run-p lint test:run test:e2e:run"
   },
   "dependencies": {
     "@remix-run/node": "^1.17.0",
