--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\"",
-    "validate": "run-p lint test:run test:e2e:run"
+    "validate": "run-p lint test:run test:e2e:run",
+    "kill": "npx kill-port 5001 5000 9099 8080 9199"
   },
   "dependencies": {
     "@remix-run/node": "^1.17.0",
@@ -34,7 +35,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "remix-google-cloud-functions": "^0.1.0",
-    "tiny-invariant": "^1.3.1", 
+    "tiny-invariant": "^1.3.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
