--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@remix-run/react": "^1.17.0",
     "@remix-run/serve": "^1.17.0",
     "aos": "^3.0.0-beta.6",
+    "date-fns": "^2.30.0",
     "firebase": "^9.22.2",
     "firebase-admin": "^11.11.1",
     "firebase-functions": "^4.3.1",
