--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^9.22.2",
     "firebase-admin": "^11.11.1",
     "firebase-functions": "^4.3.1",
+    "highlight.js": "^11.9.0",
     "isbot": "^3.6.8",
     "marked": "^4.3.0",
     "react": "^18.2.0",
