--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,5 @@
   "editor.tabSize": 2,
   "typescript.updateImportsOnFileMove.enabled": "always",
   "javascript.updateImportsOnFileMove.enabled": "always",
-  "terminal.integrated.defaultProfile.windows": "Git Bash",
-  "[xml]": {
-    "editor.defaultFormatter": "DotJoshJohnson.xml"
-  }
+  "terminal.integrated.defaultProfile.windows": "Git Bash"
 }
